2007-10-25  Michael Riepe  <too-tired@users.sourceforge.net>

	* src/dvbcut.cpp:
	* src/dvbcut.h:
	* src/dvbcutbase.ui:
	* src/eventlistitem.h:
	* src/main.cpp:
		Add bookmark conversion and the -cut option
		(patches by Ralph Glasstetter).

2007-10-22  Michael Riepe  <too-tired@users.sourceforge.net>

	* src/dvbcut.cpp:
		Display a message when setting markers failed.

	* src/mpgfile.h:
	* src/tsfile.cpp:
	* src/tsfile.h:
		Let getbookmarks() return a std::vector
		(patches by Ralph Glasstetter).

2007-10-22  Michael Riepe  <too-tired@users.sourceforge.net>

	* src/dvbcut.cpp:
	* src/dvbcut.h:
	* src/dvbcutbase.ui:
	* src/index.h:
	* src/mpgfile.h:
	* src/tsfile.cpp:
	* src/tsfile.h:
		Import bookmarks from Topfield receivers (code by Ralph Glasstetter).

2007-10-17  Michael Riepe  <too-tired@users.sourceforge.net>

	* src/dvbcut.cpp:
		Remove picture type on the right.

2007-10-17  Michael Riepe  <too-tired@users.sourceforge.net>

	* src/dvbcut.cpp:
	* src/dvbcutbase.ui:
		New layout for the label/input area.

2007-10-13  Michael Riepe  <too-tired@users.sourceforge.net>

	* src/Makefile.w32:
		Build dvbcut with -g and place a stripped copy in bin.

2007-10-12  Michael Riepe  <too-tired@users.sourceforge.net>

	* src/settings.cpp:
	* src/settings.h:
		Do not load settings until they are needed.

	* src/dvbcut.cpp:
	* src/eventlistitem.cpp:
		Use new settings interface.
 
2007-10-11  Michael Riepe  <too-tired@users.sourceforge.net>

	* src/dvbcutbase.ui:
		Add/change accelerators.

2007-10-10  Michael Kreuzer  <michael-kreuzer@gmx.de>

	* src/dvbcut.cpp:
	* src/dvbcut.h:
	* src/dvbcutbase.ui:
		Add "save snapshot" function to file menu and toolbar

2007-10-08  Michael Riepe  <too-tired@users.sourceforge.net>

	* src/dvbcut.cpp:
		Use multi-line labels.

2007-10-07  Michael Riepe  <too-tired@users.sourceforge.net>

	* src/dvbcut.cpp:
	* src/dvbcut.h:
		Add "suggest markers" function based on aspect ratio changes.

	* src/dvbcutbase.ui: