@@ -1,5 +1,13 @@
 2007-10-25  Michael Riepe  <too-tired@users.sourceforge.net>
 
+	* src/main.cpp:
+		Add missing newlines.
+
+	* src/dvbcut.cpp:
+		Display '*' marker for exported pictures.
+
+2007-10-25  Michael Riepe  <too-tired@users.sourceforge.net>
+
 	* src/dvbcut.cpp:
 	* src/dvbcut.h:
 	* src/dvbcutbase.ui:
